# FIMS_waypoint_tracking

./: Install.md  README.md  aura_control_w_surge_251230.cpp  bada_launch.service  code.md  nix-test  nyxis_control.txt  nyxis_control_w_speed_20260111.cpp  publish_waypoints.py  rib_control.txt  surge_fitt.py  yf_control.txt
helper/: ASV_teleop.py  gen_ref.py  heron_map_gui.py  ref_data.npy  ros_sim_delay_bada.py  sim_pub.py  surge_fitt.py
src/aura_msg/: CMakeLists.txt  package.xml
src/aura_msg/msg/: ActuatorOutputs.msg  Parameter.msg  PlcStatus.msg  Waypoint.msg
src/bada_bringup/: package.xml  setup.cfg  setup.py
src/bada_bringup/launch/: bada.launch.py
src/bada_msg/: CMakeLists.txt  README.md  package.xml
src/bada_msg/msg/: ActuatorOutputs.msg  ControlParameters.msg  MissionCurrent.msg  MissionItemReached.msg  Mode.msg  PlcStatus.msg  RcChannel.msg
src/comm/: README.md  package.xml  setup.cfg  setup.py
src/comm/comm/: bada_mavlink.py  plc.py  plccomm.py  plccomm_bow.py  plccomm_origin.py
src/comm/config/: bada_mavlink_config.yaml
src/comm/launch/: bada_mavlink_launch.py  plccomm_launch.py
src/comm/test/: plc_test.py  print.cpp
src/control/: CMakeLists.txt  README.md  package.xml  states.md
src/control/launch/: aura_controller.launch.py
src/control/src/: aura_wpt_model_carrot_pid_thrust.cpp  aura_wpt_model_carrot_pid_thrust_1002.cpp  aura_wpt_model_carrot_pid_thrust_origin.cpp
test/: main.cpp  main.py  main_utm.cpp  main_utm.py
